fixed dog image spacing

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -94,13 +94,13 @@ html, body {
 }
 
 #small-dog{
-	margin-bottom:-35%;
+	margin-bottom:-435px;
 	margin-left:15.5%;
 }
 
 #large-dog{
 	margin-left:64%;
-	margin-bottom:-36%;
+	margin-bottom:-450px;
 }
 
 /* d3 axis lines */
